fix: overflow-y scroll

--- a/src/global.css
+++ b/src/global.css
@@ -21,6 +21,7 @@
 body {
    font-family: "Inter", sans-serif;
    background: var(--background);
+   overflow-y: scroll;
 }
 
 .content {
